--- a/doc/pdsc.tex
+++ b/doc/pdsc.tex
@@ -84,7 +84,7 @@ be fast, responding to most queries in less than a second.
 The \ac{pdsc} library allows for quickly querying coincident observations by
 constructing a set of special databases and index structures during the
 ingestion process. The first database constructed is simply a \ac{sql} version
-of the PDS cumulative index. The second set of index structures holds geometric
+of the \ac{pds} cumulative index. The second set of index structures holds geometric
 information used for coincidence queries.
 
 The footprints of observations on the surface of Mars are reported differently
